--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "next-seo": "^6.1.0",
     "postcss": "8.4.28",
     "react": "18.2.0",
+    "react-apple-emojis": "^2.2.1",
     "react-dom": "18.2.0",
-    "react-icons": "^4.10.1",
+    "react-icons": "^5.0.1",
+    "tailwind-merge": "^2.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
