--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "export": "next export"
   },
   "dependencies": {
+    "@hebcal/core": "^5.1.0",
     "@heroicons/react": "^2.0.18",
     "@types/node": "20.5.0",
     "@types/react": "18.2.20",
