--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
   "dependencies": {
     "@hebcal/core": "^5.1.0",
     "@heroicons/react": "^2.0.18",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.5.0",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.18",
+    "lucide-react": "^0.323.0",
     "next": "13.4.18",
     "next-seo": "^6.1.0",
     "postcss": "8.4.28",
@@ -25,8 +30,9 @@
     "react-apple-emojis": "^2.2.1",
     "react-dom": "18.2.0",
     "react-icons": "^5.0.1",
-    "tailwind-merge": "^2.2.0",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.1.6"
   }
 }
