--- a/package.json
+++ b/package.json
@@ -13,25 +13,27 @@
     "@hebcal/core": "^5.1.0",
     "@heroicons/react": "^2.1.4",
     "@radix-ui/react-alert-dialog": "^1.0.5",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@types/canvas-confetti": "^1.6.4",
     "@types/node": "20.5.0",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
+    "canvas-confetti": "^1.9.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.18",
-    "lucide-react": "^0.323.0",
-    "next": "13.4.18",
+    "lucide-react": "^0.462.0",
+    "next": "^15.0.3",
     "next-seo": "^6.1.0",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-apple-emojis": "^2.2.1",
     "react-dom": "18.2.0",
     "react-icons": "^5.2.1",
-    "tailwind-merge": "^2.2.1",
+    "tailwind-merge": "^2.5.5",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.1.6"
